# acore-graphql-api

./: .env.dist  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: auth.rs  config.rs  main.rs
src/auth/: account.rs  db.rs
src/auth/account/: access.rs  realmcharacters.rs
