[package]
name = "acore-graphql"
version = "0.1.0"
edition = "2021"


[dependencies]
async-graphql = "4.0"
async-graphql-actix-web = "4.0"
actix-web = "4.1"
futures-util = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
slab = "0.4"
futures = "0.3"
sqlx = { version = "0.6", features = [
    "runtime-actix-rustls",
    "mysql",
    "chrono",
    "json",
] }
wow_srp = "0.5"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
struct-field-names-as-array = "0.1.3"
